--- a/Homepage.html
+++ b/Homepage.html
@@ -8,75 +8,96 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./styles/homepage.css">
+      <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;600;700&display=swap" rel="stylesheet">
     <!-- Add AOS Library -->
     <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+
     
 </head>
 
 <body>
-    <!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark animated-navbar" style="background-image: url('https://scontent.fmnl17-4.fna.fbcdn.net/v/t39.30808-6/468557307_1246877726587907_5557851683030240775_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=127cfc&_nc_ohc=jrAsSGCwtjUQ7kNvgEgLm9v&_nc_oc=AdgK21-_Xs7sp41SeViGQdVi4OmTrefOe_ucIkEFZVTkzTrgfF3XoM8OFMRps447Q6Y&_nc_zt=23&_nc_ht=scontent.fmnl17-4.fna&_nc_gid=AArLLmcII6tok4aj3hi0yzZ&oh=00_AYA8WUOlL2BmiDSTKyaB43Ln7e7akEpnCvusnSJ6qijsbg&oe=677BBDEB'); background-size: cover; background-position: center; background-attachment: fixed; height: 80px;">
-    <div class="container-fluid">
-        <a class="navbar-brand mx-auto d-flex align-items-center" href="homepage.html">
-            <!-- Logo or Text here -->
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
-                    <a class="nav-link text-white active" href="index.html">Home</a>
-                </li>
-                <!-- Services Dropdown -->
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle text-white px-3 py-2 rounded" href="#" id="servicesDropdown" role="button"
-                    data-bs-toggle="dropdown" aria-expanded="false">
-                    Services
-                </a>
-                <ul class="dropdown-menu shadow-lg border-0 rounded-3 mt-2" aria-labelledby="servicesDropdown">
-                    <li><a class="dropdown-item py-2 px-4 text-dark fw-semibold" href="PS.html">📖 Plagiarism Scan</a></li>
-                    <li><a class="dropdown-item py-2 px-4 text-dark fw-semibold" href="PA.html">📢 Promotional Activities</a></li>
-                    <li><a class="dropdown-item py-2 px-4 text-dark fw-semibold" href="KSA.html">📚 Knowledge Sharing</a></li>  
-                </ul>
-            </li>
+<!-- Header -->
+<header>
+  <div class="heading">
+    <ul class="heading-list mt-1">
 
-                <!-- Other Navbar Items -->
-                <li class="nav-item">
-                    <a class="nav-link text-white" href="Tech1.html">Technologies</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white" href="#research">research</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white" href="#sdgs">SDGs</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white" href="#about">About</a>
-                </li>
-            </ul>
-        </div>
+      <li class="heading-content-email"><i class="fas fa-envelope"></i> kmc@psau.edu.ph</li>
+      <li class="heading-content-phone"><i class="fas fa-phone"></i> +63 900 000 0000</li>
+      <li class="heading-content-location"><i class="fas fa-map-marker-alt"></i> PAC, San Agustin, Magalang, Pampanga, Philippines </li>
+      <li class="heading-content-social">
+        <a href="https://www.facebook.com/psau.kmc" class="social-icon" target="_blank"><i class="fab fa-facebook-f"></i></a>
+        <a href="#" class="social-icon"><i class="fas fa-envelope"></i></a>
+      </li>
+    </ul>
+  </div>
+</header>
+    <!-- Navbar -->
+<nav class="navbar navbar-expand-lg navbar-dark animated-navbar" style="position: sticky; top: 0; z-index: 999;">
+
+
+  <div class="container-fluid justify-content-center">
+
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+      <ul class="navbar-nav text-center">
+        <li class="nav-item">
+          <a class="nav-link text-white active" href="index.html">Home</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="servicesDropdown" role="button"
+            data-bs-toggle="dropdown" aria-expanded="false">
+            Services
+          </a>
+          <ul class="dropdown-menu shadow-lg border-0 mt-2" aria-labelledby="servicesDropdown">
+            <li><a class="dropdown-item py-2 px-4 text-dark fw-semibold" href="PS.html">Plagiarism Scan</a></li>
+            <li><a class="dropdown-item py-2 px-4 text-dark fw-semibold" href="PA.html">Promotional Activities</a></li>
+            <li><a class="dropdown-item py-2 px-4 text-dark fw-semibold" href="KSA.html">Knowledge Sharing</a></li>
+          </ul>
+        </li>
+            <li class="nav-item"><a class="nav-link text-white" href="Tech1.html">Technologies</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="#research">Research</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="#sdgs">SDGs</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="#about">About</a></li>
+      </ul>
     </div>
+  </div>
 </nav>
 
+<section class="video-banner">
+  <video autoplay muted loop playsinline>
+    <source src="./assets/videos/1st page back ground.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+    <div class="video-overlay"></div>
+
+  <div class="video-overlay-content">
+    <!-- <h1>Welcome to Our Site</h1> -->
+  </div>
+</section>
+
 <!-- Video Section -->
-<div class="container my-5">
+<!-- <div class="container my-5">
     <div class="video-container d-flex justify-content-center align-items-center">
         <video autoplay muted loop>
             <source src="./assets/videos/1st page back ground.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
-</div>
+</div> -->
 
  <!-- Google Map Embed -->
-    <iframe 
+    <!-- <iframe 
         src="https://www.google.com/maps/embed?pb=!1m21!1m12!1m3!1d230.28086730520036!2d120.69381148827526!3d15.217536533196059!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m6!3e6!4m0!4m3!3m2!1d15.217565326479955!2d120.69387250853227!5e1!3m2!1sen!2sph!4v1748419617295!5m2!1sen!2sph" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" 
         allowfullscreen="" 
         loading="lazy" 
         referrerpolicy="no-referrer-when-downgrade">
-    </iframe>
+    </iframe> -->
 
      <!-- Media Resources -->
      <section id="media-resources" class="py-5">
@@ -464,13 +485,24 @@
     <footer class="text-center">
         <p>&copy;Philippine Copyright 2025 by Pampanga State Agricultural University</p>
     </footer>
-
+  </body>
+  <script>
+  window.addEventListener("scroll", function () {
+    const navbar = document.querySelector(".navbar");
+    if (window.scrollY > 50) { // Change 50 to your desired scroll threshold
+      navbar.classList.add("sticky-active");
+    } else {
+      navbar.classList.remove("sticky-active");
+    }
+  });
+</script>
     <!-- Bootstrap JS Bundle -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
     <script>
         AOS.init();
     </script>
+
 
 </body>
 
