--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- Link to Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="./styles/global.css">
 
 </head>
 
@@ -15,22 +16,21 @@
     <!-- Transparent Navbar -->
     <nav class="navbar">
         <div class="carousel-text">
-            <span>Acquire</span>
-            <span>Promote</span>
-            <span>Share</span>
+        <div class="fade-text">Acquire</div>
+        <div class="fade-text">Promote</div>
+        <div class="fade-text">Share</div>
         </div>
     </nav>
 
     <!-- Hero Section -->
     <div class="hero-section">
-        <video autoplay muted loop>
-            <source src="opener_14-37-44.mp4" type="video/mp4">
+        <video autoplay muted >
+            <source src="/assets/videos/opener_14-37-44.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
         <div class="hero-overlay"></div>
         <div class="hero-content">
             <div class="me-md-3 mb-2 mb-md-0">
-                <img src="Untitled61_20250203032428.png" alt="Logo" style="height: 200px; width: auto;" />
                 <a href="Homepage.html" class="btn two-tone">Learn More</a>
             </div>
         </div>
@@ -38,7 +38,7 @@
 
     <!-- Footer -->
     <footer class="text-center">
-        <p>&copy; 2024 Pampanga State Agricultural University. All rights reserved.</p>
+        <p>&copy; 2025 Pampanga State Agricultural University. All rights reserved.</p>
     </footer>
 
     <!-- Bootstrap JS Bundle -->
