image resolution change for media resources

--- a/Homepage.html
+++ b/Homepage.html
@@ -97,7 +97,10 @@
             <div class="col-md-4 mb-4" data-aos="zoom-in" data-aos-delay="100">
                 <a href="ictv.html" class="text-decoration-none">
                     <div class="card text-center media-card card-hover">
-                        <img src="./assets/img/ICTv.png" class="card-img-top media-img" alt="ICTV">
+                        <picture>
+                            <source srcset="./assets/img/ICTv.webp" type="image/webp">
+                            <img src="./assets/img/ICTv.png" class="card-img-top media-img" alt="ICTV">
+                        </picture>              
                         <div class="card-body">
                             <h5 class="card-title">ICTV</h5>
                         </div>
@@ -108,7 +111,10 @@
             <div class="col-md-4 mb-4" data-aos="zoom-in" data-aos-delay="200">
                 <a href="iec.html" class="text-decoration-none">
                     <div class="card text-center media-card card-hover">
-                        <img src="./assets/img/IEC.png" class="card-img-top media-img" alt="IEC Materials">
+                        <picture>
+                            <source srcset="./assets/img/IEC.webp" type="image/webp">
+                            <img src="./assets/img/IEC.png" class="card-img-top media-img" alt="IEC Materials">
+                        </picture>
                         <div class="card-body">
                             <h5 class="card-title">IEC Materials</h5>
                         </div>
@@ -119,7 +125,10 @@
             <div class="col-md-4 mb-4" data-aos="zoom-in" data-aos-delay="300">
                 <a href="modules.html" class="text-decoration-none">
                     <div class="card text-center media-card card-hover">
-                        <img src="./assets/img/MODULES.png" class="card-img-top media-img" alt="Modules">
+                        <picture>
+                            <source srcset="./assets/img/MODULES.webp" type="image/webp">
+                            <img src="./assets/img/MODULES.png" class="card-img-top media-img" alt="Modules">
+                        </picture>
                         <div class="card-body">
                             <h5 class="card-title">MODULES</h5>
                         </div>
@@ -130,7 +139,10 @@
             <div class="col-md-4 mb-4" data-aos="zoom-in" data-aos-delay="400">
                 <a href="newsletter.html" class="text-decoration-none">
                     <div class="card text-center media-card card-hover">
-                        <img src="./assets/img/news.png" class="card-img-top media-img" alt="Newsletter">
+                        <picture>
+                            <source srcset="./assets/img/news.webp" type="image/webp">
+                            <img src="./assets/img/news.png" class="card-img-top media-img" alt="Newsletter">
+                        </picture>
                         <div class="card-body">
                             <h5 class="card-title">NEWS LETTER</h5>
                         </div>
@@ -141,7 +153,10 @@
             <div class="col-md-4 mb-4" data-aos="zoom-in" data-aos-delay="500">
                 <a href="tech portfolio.html" class="text-decoration-none">
                     <div class="card text-center media-card card-hover">
-                        <img src="./assets/img/techprof.png" class="card-img-top media-img" alt="Tech Portfolio">
+                        <picture>
+                            <source srcset="./assets/img/techprof.webp" type="image/webp">
+                            <img src="./assets/img/techprof.png" class="card-img-top media-img" alt="Tech Portfolio">
+                        </picture>
                         <div class="card-body">
                             <h5 class="card-title">TECH PORTFOLIO</h5>
                         </div>
