--- a/iec.html
+++ b/iec.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="./styles/iec.css">
   <link rel="stylesheet" href="./styles/media-resource-navbar.css">
-  <link rel="stylesheet" href="/styles/global.css">
+  <link rel="stylesheet" href="./styles/global.css">
 
 </head>
 
