--- a/Tech1.html
+++ b/Tech1.html
@@ -8,7 +8,7 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="./styles/tech1.css">
-    <link rel="stylesheet" href="/styles/global.css">
+    <link rel="stylesheet" href="./styles/global.css">
   
   <!-- Google Fonts -->
 
