--- a/ictv.html
+++ b/ictv.html
@@ -7,9 +7,9 @@
     <title>ICTV</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-    <link rel="stylesheet" href="/styles/ictv.css">
+    <link rel="stylesheet" href="./styles/ictv.css">
     <link rel="stylesheet" href="./styles/media-resource-navbar.css">
-    <link rel="stylesheet" href="/styles/global.css">
+    <link rel="stylesheet" href="./styles/global.css">
     <style>
  
     </style>
@@ -44,11 +44,11 @@
         <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mx-auto text-center">
             <li class="nav-item"><a class="nav-link text-white" href="Homepage.html">Home</a></li>
-            <li class="nav-item"><a class="nav-link text-white" href="ictv.html">ICTV</a></li>
+            <li class="nav-item"><a class="nav-link text-white active" href="ictv.html">ICTV</a></li>
             <li class="nav-item"><a class="nav-link text-white" href="iec.html">IEC Materials</a></li>
             <li class="nav-item"><a class="nav-link text-white" href="newsletter.html">Newsletter</a></li>
             <li class="nav-item"><a class="nav-link text-white" href="modules.html">Modules</a></li>
-            <li class="nav-item"><a class="nav-link text-white active" href="tech portfolio.html">Tech Portfolio</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="tech portfolio.html">Tech Portfolio</a></li>
         </ul>
         </div>
     </div>
