--- a/modules.html
+++ b/modules.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="./styles/modules.css">
     <link rel="stylesheet" href="./styles/media-resource-navbar.css">
-    <link rel="stylesheet" href="/styles/global.css">
+    <link rel="stylesheet" href="./styles/global.css">
 
 </head>
 
