--- a/tech portfolio.html
+++ b/tech portfolio.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="./styles/tech-portfolio.css">
   <link rel="stylesheet" href="./styles/media-resource-navbar.css">
-  <link rel="stylesheet" href="/styles/global.css">
+  <link rel="stylesheet" href="./styles/global.css">
 </head>
 
 <body>
