--- a/modules.html
+++ b/modules.html
@@ -19,7 +19,7 @@
     <!-- Background Video Container -->
     <div class="background-container">
         <video autoplay muted loop>
-            <source src="/assets/videos/Orange Abstract Background YouTube Thumbnail1.mp4" type="video/mp4">
+            <source src="./assets/videos/Orange Abstract Background YouTube Thumbnail1.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
