--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- Hero Section -->
     <div class="hero-section">
         <video autoplay muted >
-            <source src="/assets/videos/opener_14-37-44.mp4" type="video/mp4">
+            <source src="./assets/videos/opener_14-37-44.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
         <div class="hero-overlay"></div>
