--- a/newsletter.html
+++ b/newsletter.html
@@ -15,7 +15,7 @@
 
 <div class="background-container">
   <video autoplay muted loop>
-    <source src="/videos/background.mp4" type="video/mp4">
+    <source src="./videos/background.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 </div>
