added iec brochures and polishing

--- a/Homepage.html
+++ b/Homepage.html
@@ -73,7 +73,7 @@
 
 <section class="video-banner" data-aos="fade-down" data-aos-duration="1500">
   <video autoplay muted loop playsinline>
-    <source src="./assets/videos/1st page back ground.mp4" type="video/mp4">
+    <source src="./assets/videos/homepage-banner.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
     <div class="video-overlay"></div>
@@ -98,8 +98,8 @@
                 <a href="ictv.html" class="text-decoration-none">
                     <div class="card text-center media-card card-hover">
                         <picture>
-                            <source srcset="./assets/img/ICTv.webp" type="image/webp">
-                            <img src="./assets/img/ICTv.png" class="card-img-top media-img" alt="ICTV">
+                            <source srcset="./assets/img/ictv_thumbnail/ICTv.webp" type="image/webp">
+                            <img src="./assets/img/ictv_thumbnail/ICTv.png" class="card-img-top media-img" alt="ICTV">
                         </picture>              
                         <div class="card-body">
                             <h5 class="card-title">ICTV</h5>
