--- a/iec.html
+++ b/iec.html
@@ -60,47 +60,59 @@
   </div>
 
     <div class="container-page">
-      <div class="row mt-4">
-        <!-- Card 1 -->
-        <div class="col-md-4 mb-4">
-          <div class="card h-100">
-            <picture>
-                 <source srcset="./assets/img/" type="image/webp">
-                 <img src="./assets/img/" class="card-img-top media-img" alt="ICTV">
-            </picture>  
-            <!-- <img src="./assets/img/iecimg1.png" class="card-img-top" alt="IEC Material"> -->
+      <div class="row g-4 mt-4">
+
+      <!-- Brochure Card -->
+      <div class="col-md-6 col-lg-4">
+        <a href="./assets/files/iec_brochure/Brochure-Tilapia_supplement.pdf" target="_blank" class="text-decoration-none">
+          <div class="card h-100 shadow brochure-card">
+              <img src="./assets/img/iec_thumbnail/iec_tilapia_supplements.png" alt="ICT Brochure" class="card-img-top" loading="lazy">
             <div class="card-body">
-              <h5 class="card-title">Episode 1</h5>
-              <p class="card-text">Discover the basics of fisheries and sustainable practices.</p>
-              <a href="https://www.facebook.com/ictrdpsau/videos/658010909530119" class="btn btn-primary"target="_blank">View</a>
+              <h5 class="card-title">Tilapia Supplement</h5>
+              <p class="card-text small text-muted">Supplements aid tilapia farming by promoting growth,
+                enhancing immunity, and improving feed efficiency.</p>
             </div>
           </div>
-        </div>
+        </a>
+      </div>
 
-        <!-- Card 2 -->
-        <div class="col-md-4 mb-4">
-          <div class="card h-100">
-            <img src="./assets/img/iecimg2.png" class="card-img-top" alt="IEC Material">
+      <!-- Brochure Card -->
+      <div class="col-md-6 col-lg-4">
+        <a href="./assets/files/iec_brochure/KM-BROCHURE-FINAL.pdf" target="_blank" class="text-decoration-none">
+          <div class="card h-100 shadow brochure-card">
+              <img src="./assets/img/iec_thumbnail/iec_km_brochure.png" alt="ICT Brochure" class="card-img-top" loading="lazy">
             <div class="card-body">
-              <h5 class="card-title">Episode 2</h5>
-              <p class="card-text">Exploring aquaculture techniques and community involvement.</p>
-              <a href="https://www.facebook.com/ictrdpsau/videos/1869446936782287" class="btn btn-primary"target="_blank">View</a>
+              <h5 class="card-title">Knowledge Management Unit</h5>
+              <p class="card-text small text-muted">Where minds sit on the couch, ideas stir in a cup, and knowledge holds the mix.</p>
             </div>
           </div>
-        </div>
+        </a>
+      </div>
 
-        <!-- Card 3 -->
-        <div class="col-md-4 mb-4">
-          <div class="card h-100">
-            <img src="./assets/img/iecimg3.png" class="card-img-top" alt="IEC Material">
+      <!-- Brochure Card -->
+      <div class="col-md-6 col-lg-4">
+        <a href="./assets/files/iec_brochure/CIRP_4.pdf" target="_blank" class="text-decoration-none">
+          <div class="card h-100 shadow brochure-card">
+              <img src="./assets/img/iec_thumbnail/iec_CIRP.png" alt="ICT Brochure" class="card-img-top" loading="lazy">
             <div class="card-body">
-              <h5 class="card-title">Episode 3</h5>
-              <p class="card-text">Innovations in agriculture and farming practices for rural development.</p>
-              <a href="https://www.facebook.com/ictrdpsau/videos/6486186524792074" class="btn btn-primary"target="_blank">View</a>
+              <h5 class="card-title">Challenges in Rice Production</h5>
+              <p class="card-text small text-muted">A quick look into the key issues faced by rice farmers today.</p>
             </div>
           </div>
-        </div>
+        </a>
+      </div>
 
+      <!-- Brochure Card -->
+      <div class="col-md-6 col-lg-4">
+        <a href="./assets/files/iec_brochure/WMSIMCS-Brochure.pdf" target="_blank" class="text-decoration-none">
+          <div class="card h-100 shadow brochure-card">
+              <img src="./assets/img/iec_thumbnail/iec_wmsimcs.png" alt="ICT Brochure" class="card-img-top" loading="lazy">
+            <div class="card-body">
+              <h5 class="card-title">WEED MANAGEMENT STRATEGIES IN MODERN Crop Science</h5>
+              <p class="card-text small text-muted">An overview of effective weed control techniques for sustainable crop production.</p>
+            </div>
+          </div>
+        </a>
       </div>
       
     </div>
