--- a/tech portfolio.html
+++ b/tech portfolio.html
@@ -58,13 +58,13 @@
   </nav>
 
   <!-- Image Section -->
-  <section class="container-page my-5" style="padding-top: 80px">
+  <section class="container-page my-5">
     <div class="row g-4">
       <!-- Repeat image blocks as needed -->
       <div class="col-md-6 col-lg-4">
         <div class="image-card">
           <div class="image-container">
-            <img src="./assets/img/COVER.jpg" alt="Cover Image" />
+            <img src="./assets/img/tech_thumbnail/COVER.jpg" alt="Cover Image" />
           </div>
         </div>
       </div>
@@ -72,7 +72,7 @@
       <div class="col-md-6 col-lg-4">
         <div class="image-card">
           <div class="image-container">
-            <img src="./assets/img/TECH1.jpg" alt="Tech 1" />
+            <img src="./assets/img/tech_thumbnail/TECH1.jpg" alt="Tech 1" />
           </div>
         </div>
       </div>
@@ -80,7 +80,7 @@
       <div class="col-md-6 col-lg-4">
         <div class="image-card">
           <div class="image-container">
-            <img src="./assets/img/TECH3.jpg" alt="Tech 2" />
+            <img src="./assets/img/tech_thumbnail/TECH3.jpg" alt="Tech 2" />
           </div>
         </div>
       </div>
@@ -88,7 +88,7 @@
       <div class="col-md-6 col-lg-4">
         <div class="image-card">
           <div class="image-container">
-            <img src="./assets/img/TECH4.jpg" alt="Tech 3" />
+            <img src="./assets/img/tech_thumbnail/TECH4.jpg" alt="Tech 3" />
           </div>
         </div>
       </div>
@@ -96,7 +96,7 @@
       <div class="col-md-6 col-lg-4">
         <div class="image-card">
           <div class="image-container">
-            <img src="./assets/img/TECH5.jpg" alt="Tech 4" />
+            <img src="./assets/img/tech_thumbnail/TECH5.jpg" alt="Tech 4" />
           </div>
         </div>
       </div>
@@ -104,7 +104,7 @@
       <div class="col-md-6 col-lg-4">
         <div class="image-card">
           <div class="image-container">
-            <img src="./assets/img/TECH7.jpg" alt="Tech 6" />
+            <img src="./assets/img/tech_thumbnail/TECH7.jpg" alt="Tech 6" />
           </div>
         </div>
       </div>
@@ -112,7 +112,7 @@
       <div class="col-md-6 col-lg-4">
         <div class="image-card">
           <div class="image-container">
-            <img src="./assets/img/TECH8.jpg" alt="Tech 7" />
+            <img src="./assets/img/tech_thumbnail/TECH8.jpg" alt="Tech 7" />
           </div>
         </div>
       </div>
@@ -120,7 +120,7 @@
       <div class="col-md-6 col-lg-4">
         <div class="image-card">
           <div class="image-container">
-            <img src="./assets/img/TECH9.jpg" alt="Tech 8" />
+            <img src="./assets/img/tech_thumbnail/TECH9.jpg" alt="Tech 8" />
           </div>
         </div>
       </div>
@@ -128,7 +128,7 @@
       <div class="col-md-6 col-lg-4">
         <div class="image-card">
           <div class="image-container">
-            <img src="./assets/img/TECH10.jpg" alt="Tech 9" />
+            <img src="./assets/img/tech_thumbnail/TECH10.jpg" alt="Tech 9" />
           </div>
         </div>
       </div>
@@ -136,14 +136,14 @@
       <div class="col-md-6 col-lg-4">
         <div class="image-card">
           <div class="image-container">
-            <img src="./assets/img/TECH11.jpg" alt="Tech 10" />
+            <img src="./assets/img/tech_thumbnail/TECH11.jpg" alt="Tech 10" />
           </div>
         </div>
       </div>
       <div class="col-md-6 col-lg-4">
         <div class="image-card">
           <div class="image-container">
-            <img src="./assets/img/PSAU Tech. Portfolio (1)_page-0013.jpg" alt="Tech 10" />
+            <img src="./assets/img/tech_thumbnail/PSAU Tech. Portfolio (1)_page-0013.jpg" alt="Tech 10" />
           </div>
         </div>
       </div>
