--- a/ictv.html
+++ b/ictv.html
@@ -71,8 +71,8 @@
                 <div class="col-md-4 mb-4">
                     <div class="card">
                         <picture>
-                            <source srcset="./assets/img/ictv ep 1.webp" type="image/webp">
-                            <img src="./assets/img/ictv ep 1.png" class="card-img-top media-img" alt="ICTV">
+                            <source srcset="./assets/img/ictv_thumbnail/ictv ep 1.webp" type="image/webp">
+                            <img src="./assets/img/ictv_thumbnail/ictv ep 1.png" class="card-img-top media-img" alt="ICTV">
                         </picture>  
                         <div class="card-body">
                             <h5 class="ictv-card-title">ICTV EPISODE 1</h5>
@@ -85,8 +85,8 @@
                 <div class="col-md-4 mb-4">
                     <div class="card">
                         <picture>
-                            <source srcset="./assets/img/ictv ep 2.webp" type="image/webp">
-                            <img src="./assets/img/ictv ep 2.png" class="card-img-top media-img" alt="ICTV">
+                            <source srcset="./assets/img/ictv_thumbnail/ictv ep 2.webp" type="image/webp">
+                            <img src="./assets/img/ictv_thumbnail/ictv ep 2.png" class="card-img-top media-img" alt="ICTV">
                         </picture>  
                         <div class="card-body">
                             <h5 class="ictv-card-title">ICTV EPISODE 2</h5>
@@ -99,8 +99,8 @@
                 <div class="col-md-4 mb-4">
                     <div class="card">
                         <picture>
-                            <source srcset="./assets/img/ictv ep 3.webp" type="image/webp">
-                            <img src="./assets/img/ictv ep 3.png" class="card-img-top media-img" alt="ICTV">
+                            <source srcset="./assets/img/ictv_thumbnail/ictv ep 3.webp" type="image/webp">
+                            <img src="./assets/img/ictv_thumbnail/ictv ep 3.png" class="card-img-top media-img" alt="ICTV">
                         </picture>  
                         <div class="card-body">
                             <h5 class="ictv-card-title">ICTV EPISODE 3</h5>
@@ -113,8 +113,8 @@
                 <div class="col-md-4 mb-4">
                     <div class="card">
                         <picture>
-                            <source srcset="./assets/img/ictv ep 4.webp" type="image/webp">
-                            <img src="./assets/img/ictv ep 4.png" class="card-img-top media-img" alt="ICTV">
+                            <source srcset="./assets/img/ictv_thumbnail/ictv ep 4.webp" type="image/webp">
+                            <img src="./assets/img/ictv_thumbnail/ictv ep 4.png" class="card-img-top media-img" alt="ICTV">
                         </picture>  
                         <div class="card-body">
                             <h5 class="ictv-card-title">ICTV EPISODE 4</h5>
@@ -127,8 +127,8 @@
                 <div class="col-md-4 mb-4">
                     <div class="card">
                         <picture>
-                            <source srcset="./assets/img/ictv ep 5.webp" type="image/webp">
-                            <img src="./assets/img/ictv ep 5.png" class="card-img-top media-img" alt="ICTV">
+                            <source srcset="./assets/img/ictv_thumbnail/ictv ep 5.webp" type="image/webp">
+                            <img src="./assets/img/ictv_thumbnail/ictv ep 5.png" class="card-img-top media-img" alt="ICTV">
                         </picture>  
                         <div class="card-body">
                             <h5 class="ictv-card-title">ICTV EPISODE 5</h5>
@@ -141,8 +141,8 @@
                 <div class="col-md-4 mb-4">
                     <div class="card">
                         <picture>
-                            <source srcset="./assets/img/ictv ep 6.webp" type="image/webp">
-                            <img src="./assets/img/ictv ep 6.png" class="card-img-top media-img" alt="ICTV">
+                            <source srcset="./assets/img/ictv_thumbnail/ictv ep 6.webp" type="image/webp">
+                            <img src="./assets/img/ictv_thumbnail/ictv ep 6.png" class="card-img-top media-img" alt="ICTV">
                         </picture>  
                         <div class="card-body">
                             <h5 class="ictv-card-title">ICTV EPISODE 6</h5>
@@ -155,8 +155,8 @@
                 <div class="col-md-4 mb-4">
                     <div class="card">
                         <picture>
-                            <source srcset="./assets/img/ictv ep 7.webp" type="image/webp">
-                            <img src="./assets/img/ictv ep 7.png" class="card-img-top media-img" alt="ICTV">
+                            <source srcset="./assets/img/ictv_thumbnail/ictv ep 7.webp" type="image/webp">
+                            <img src="./assets/img/ictv_thumbnail/ictv ep 7.png" class="card-img-top media-img" alt="ICTV">
                         </picture>  
                         <div class="card-body">
                             <h5 class="ictv-card-title">ICTV EPISODE 7</h5>
@@ -169,8 +169,8 @@
                 <div class="col-md-4 mb-4">
                     <div class="card">
                         <picture>
-                            <source srcset="./assets/img/ictv ep 8.webp" type="image/webp">
-                            <img src="./assets/img/ictv ep 8.png" class="card-img-top media-img" alt="ICTV">
+                            <source srcset="./assets/img/ictv_thumbnail/ictv ep 8.webp" type="image/webp">
+                            <img src="./assets/img/ictv_thumbnail/ictv ep 8.png" class="card-img-top media-img" alt="ICTV">
                         </picture>  
                         <div class="card-body">
                             <h5 class="ictv-card-title">ICTV EPISODE 8</h5>
@@ -183,8 +183,8 @@
                 <div class="col-md-4 mb-4">
                     <div class="card">
                         <picture>
-                            <source srcset="./assets/img/ictv ep 9.webp" type="image/webp">
-                            <img src="./assets/img/ictv ep 9.png" class="card-img-top media-img" alt="ICTV">
+                            <source srcset="./assets/img/ictv_thumbnail/ictv ep 9.webp" type="image/webp">
+                            <img src="./assets/img/ictv_thumbnail/ictv ep 9.png" class="card-img-top media-img" alt="ICTV">
                         </picture>  
                         <div class="card-body">
                             <h5 class="ictv-card-title">ICTV EPISODE 9</h5>
@@ -197,8 +197,8 @@
                 <div class="col-md-4 mb-4">
                     <div class="card">
                         <picture>
-                            <source srcset="./assets/img/ictv ep 10.webp" type="image/webp">
-                            <img src="./assets/img/ictv ep 10.png" class="card-img-top media-img" alt="ICTV">
+                            <source srcset="./assets/img/ictv_thumbnail/ictv ep 10.webp" type="image/webp">
+                            <img src="./assets/img/ictv_thumbnail/ictv ep 10.png" class="card-img-top media-img" alt="ICTV">
                         </picture>
                         <div class="card-body">
                             <h5 class="ictv-card-title">ICTV EPISODE 10</h5>
@@ -211,12 +211,12 @@
                 <div class="col-md-4 mb-4">
                     <div class="card">
                         <picture>
-                            <source srcset="./assets/img/ictv ep 11.webp" type="image/webp">
-                            <img src="./assets/img/ictv ep 11.png" class="card-img-top media-img" alt="ICTV">
+                            <source srcset="./assets/img/ictv_thumbnail/ictv ep 11.webp" type="image/webp">
+                            <img src="./assets/img/ictv_thumbnail/ictv ep 11.png" class="card-img-top media-img" alt="ICTV">
                         </picture>  
                         <div class="card-body">
                             <h5 class="ictv-card-title">ICTV EPISODE 11</h5>
-                            <p class="card-text"><em>text here</em></p>
+                            <p class="card-text">Rice Production</p>
                             <a href="https://www.facebook.com/ictrdpsau/videos/1225786205694099" target="_blank" class="btn btn-primary">Watch Episode</a>
                         </div>
                     </div>
