--- a/newsletter.html
+++ b/newsletter.html
@@ -7,7 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="./styles/newsletter.css">
-  <link rel="stylesheet" href="./styles/global.css">
+  <link rel="stylesheet" href="/styles/global.css">
   <link rel="stylesheet" href="./styles/media-resource-navbar.css">
 
 </head>
@@ -15,7 +15,7 @@
 
 <div class="background-container">
   <video autoplay muted loop>
-    <source src="./videos/background.mp4" type="video/mp4">
+    <source src="/videos/background.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 </div>
