research section modified

--- a/iec.html
+++ b/iec.html
@@ -6,6 +6,7 @@
   <title>IEC Materials</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./styles/iec.css">
   <link rel="stylesheet" href="./styles/media-resource-navbar.css">
   <link rel="stylesheet" href="./styles/global.css">
