--- a/Tech1.html
+++ b/Tech1.html
@@ -7,8 +7,10 @@
   
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./styles/tech1.css">
     <link rel="stylesheet" href="./styles/global.css">
+    <link rel="stylesheet" href="./styles/navbar.css">
   
   <!-- Google Fonts -->
 
@@ -41,26 +43,35 @@
     </ul>
   </div>
 </header>
-<!-- Navbar -->
- 
-  <nav class="navbar navbar-expand-lg navbar-dark">
-    <div class="container-fluid justify-content-center"> <!-- center content -->
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-          <ul class="navbar-nav text-center">
-              <li class="nav-item"><a class="nav-link text-white" href="Homepage.html">Home</a></li>
-              <li class="nav-item"><a class="nav-link text-white" href="ictv.html">ICTV</a></li>
-              <li class="nav-item"><a class="nav-link text-white" href="iec.html">IEC Materials</a></li>
-              <li class="nav-item"><a class="nav-link text-white" href="newsletter.html">Newsletter</a></li>
-              <li class="nav-item"><a class="nav-link text-white" href="modules.html">Modules</a></li>
-              <li class="nav-item"><a class="nav-link text-white" href="tech portfolio.html">Tech Portfolio</a></li>
-          </ul>
-        </div>
+    <!-- Navbar -->
+<nav class="navbar navbar-expand-lg navbar-dark " data-aos="fade-down" data-aos-duration="1000"style="position: sticky; top: 0; z-index: 999;">
+  <div class="container-fluid justify-content-center">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+      <ul class="navbar-nav text-center">
+            <li class="nav-item"><a class="nav-link text-white" href="Homepage.html">Home</a></li>
+            <li class="nav-item dropdown dropdown-hover">
+                <a class="nav-link dropdown-toggle text-white" href="#" id="servicesDropdown" role="button">
+                    Services
+                </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item text-dark" href="PS.html">Plagiarism Scan</a></li>
+                        <li><a class="dropdown-item text-dark" href="PA.html">Promotional Activities</a></li>
+                        <li><a class="dropdown-item text-dark" href="KSA.html">Knowledge Sharing</a></li>
+                    </ul>
+            </li>
+            <li class="nav-item"><a class="nav-link text-white" href="Tech1.html">Technologies</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="Homepage.html#research">Research</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="Homepage.html#sdgs">SDGs</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="Homepage.html#about">About</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="contact.html">Contact</a></li>
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
       <!-- Background Video -->
   <div class="background-container">
     <video autoplay muted loop>
@@ -71,13 +82,13 @@
   <!-- Cards -->
   <div class="cards-container">
     <div class="card">
-      <img src="tech/11.png" alt="Tech 1" onclick="openModal(this)">
+      <img src="./assets/img/11.png" alt="Tech 1" onclick="openModal(this)">
     </div>
     <div class="card">
-      <img src="tech/22.png" alt="Tech 2" onclick="openModal(this)">
+      <img src="22.png" alt="Tech 2" onclick="openModal(this)">
     </div>
     <div class="card">
-      <img src="tech/33.png" alt="Tech 3" onclick="openModal(this)">
+      <img src="33.png" alt="Tech 3" onclick="openModal(this)">
     </div>
   </div>
 
