--- a/iot.html
+++ b/iot.html
@@ -6,50 +6,61 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agriculture Research</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/iot.css">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link rel="stylesheet" href="./styles/media-resource-navbar.css">
+    <link rel="stylesheet" href="./styles/global.css">
+
 </head>
 
 <body>
     <!-- Background Video Container -->
     <div class="background-container">
         <video autoplay muted loop>
-            <source src="/assets/videos/Orange Abstract Background YouTube Thumbnail1.mp4" type="video/mp4">
+            <source src="./assets/videos/Orange Abstract Background YouTube Thumbnail1.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
+<!-- Header -->
+<header>
+  <div class="heading" data-aos="fade-down" data-aos-duration="1000">
+    <ul class="heading-list mt-1">
+      <li class="heading-content-email"><i class="fas fa-envelope"></i> kmc@psau.edu.ph</li>
+      <li class="heading-content-phone"><i class="fas fa-phone"></i> +63 900 000 0000</li>
+      <li class="heading-content-location"><i class="fas fa-map-marker-alt"></i> PAC, San Agustin, Magalang, Pampanga, Philippines </li>
+      <li class="heading-content-social">
+        <a href="https://www.facebook.com/psau.kmc" class="social-icon" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+        <a href="#" class="social-icon"><i class="fa-brands fa-youtube"></i></a>
+        <a href="#" class="social-icon"><i class="fa-brands fa-tiktok"></i></a>
+        <a href="mailto:kmc@psau.edu.ph" class="social-icon"><i class="fas fa-envelope"></i></a>
+      </li>
+    </ul>
+  </div>
+</header>
+    <nav class="navbar navbar-expand-lg navbar-dark">
+    <div class="container-fluid">
+        <!-- Navbar Toggler (right-aligned) -->
+        <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
 
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg">
-        <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            Research Areas
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="agriculture.html">Agriculture</a></li>
-                            <li><a class="dropdown-item" href="aquaculture.html">Aquaculture</a></li>
-                            <li><a class="dropdown-item" href="livestock.html">Livestock</a></li>
-                            <li><a class="dropdown-item" href="livelihood.html">Livelihood</a></li>
-                            <li><a class="dropdown-item" href="biotechnology.html">Biotechnology</a></li>
-                            <li><a class="dropdown-item" href="root-crops.html">Root Crops</a></li>
-                            <li><a class="dropdown-item" href="iot.html">Internet of Things</a></li>
-                            <li><a class="dropdown-item" href="others.html">Others</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="Homepage.html">Home</a>
-                    </li>
-                </ul>
-            </div>
+        <!-- Collapsible Nav Links -->
+        <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav mx-auto text-center">
+            <li class="nav-item"><a class="nav-link text-white" href="Homepage.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="agriculture.html">Agriculture</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="aquaculture.html">Aquaculture</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="livestock.html">Livestock</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="livelihood.html">Livelihood</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="biotechnology.html">Biotechnology</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="root-crops.html">Root Crops</a></li>
+            <li class="nav-item"><a class="nav-link text-white active" href="iot.html">Internet of Things</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="others.html">Others</a></li>
+        </ul>
         </div>
+    </div>
     </nav>
 
     <!-- Header Video -->
