--- a/Homepage.html
+++ b/Homepage.html
@@ -175,7 +175,7 @@
     <hr class="hr">
     </h2>
 
-        <div class="container-page">
+    <div class="container-page">
         <div class="row">
         <!-- Repeat for each card -->
         <div class="col-md-3 mb-4" data-aos="zoom-in" data-aos-delay="100">
@@ -183,7 +183,7 @@
             <div class="card research-card">
                 <img src="./assets/img/agri.png" class="card-img-top" alt="Agriculture">
                 <div class="card-body">
-                <h5 class="card-title" style="color: #f8621b; font-weight: bold;">Agriculture</h5>
+                <h5 class="card-title">Agriculture</h5>
                 <p class="card-text">Study on sustainable agricultural practices.</p>
                 </div>
             </div>
@@ -195,7 +195,7 @@
             <div class="card research-card">
                 <img src="./assets/img/aqua.png" class="card-img-top" alt="Aquaculture">
                 <div class="card-body">
-                <h5 class="card-title" style="color: #f8621b; font-weight: bold;">Aquaculture</h5>
+                <h5 class="card-title">Aquaculture</h5>
                 <p class="card-text">Research on aquaculture development and sustainability.</p>
                 </div>
             </div>
@@ -207,7 +207,7 @@
             <div class="card research-card">
                 <img src="./assets/img/LiveStocks.png" class="card-img-top" alt="Livestock">
                 <div class="card-body">
-                <h5 class="card-title" style="color: #f8621b; font-weight: bold;">Livestock</h5>
+                <h5 class="card-title">Livestock</h5>
                 <p class="card-text">Innovative practices for livestock farming.</p>
                 </div>
             </div>
@@ -219,7 +219,7 @@
             <div class="card research-card">
                 <img src="./assets/img/LIVELI.png" class="card-img-top" alt="Livelihood">
                 <div class="card-body">
-                <h5 class="card-title" style="color: #f8621b; font-weight: bold;">Livelihood</h5>
+                <h5 class="card-title">Livelihood</h5>
                 <p class="card-text">Projects aimed at improving rural livelihoods.</p>
                 </div>
             </div>
@@ -231,7 +231,7 @@
             <div class="card research-card">
                 <img src="./assets/img/biotech.png" class="card-img-top" alt="Biotechnology">
                 <div class="card-body">
-                <h5 class="card-title" style="color: #f8621b; font-weight: bold;">Biotechnology</h5>
+                <h5 class="card-title">Biotechnology</h5>
                 <p class="card-text">Advancements in genetic engineering and medicine.</p>
                 </div>
             </div>
@@ -243,7 +243,7 @@
             <div class="card research-card">
                 <img src="./assets/img/RootCRops.png" class="card-img-top" alt="Root Crops">
                 <div class="card-body">
-                <h5 class="card-title" style="color: #f8621b; font-weight: bold;">Root Crops</h5>
+                <h5 class="card-title">Root Crops</h5>
                 <p class="card-text">Exploration of root crops for food security.</p>
                 </div>
             </div>
@@ -255,7 +255,7 @@
             <div class="card research-card">
                 <img src="./assets/img/internetofthings.png" class="card-img-top" alt="IoT">
                 <div class="card-body">
-                <h5 class="card-title" style="color: #f8621b; font-weight: bold;">Internet of Things</h5>
+                <h5 class="card-title">Internet of Things</h5>
                 <p class="card-text">Using IoT for precision agriculture and research.</p>
                 </div>
             </div>
@@ -267,7 +267,7 @@
             <div class="card research-card">
                 <img src="./assets/img/other-71.svg" class="card-img-top" alt="Others">
                 <div class="card-body">
-                <h5 class="card-title" style="color: #f8621b; font-weight: bold;">Others</h5>
+                <h5 class="card-title">Others</h5>
                 <p class="card-text">Exploring emerging research topics.</p>
                 </div>
             </div>
