--- a/aquaculture.html
+++ b/aquaculture.html
@@ -7,7 +7,7 @@
     <title>Agriculture Research</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./styles/aquaculture.css">
+    <link rel="stylesheet" href="./styles/research.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="./styles/media-resource-navbar.css">
     <link rel="stylesheet" href="./styles/global.css">
@@ -15,13 +15,15 @@
 </head>
 
 <body>
-    <!-- Background Video Container -->
-    <div class="background-container">
-        <video autoplay muted loop>
-            <source src="./assets/videos/Orange Abstract Background YouTube Thumbnail1.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
-    </div>
+<!-- Background Image Container -->
+<div class="background-container">
+  <picture>
+    <!-- Optional fallback for browsers that don't support WebP -->
+    <source srcset="./assets/img/logos-bg.webp" type="image/webp">
+    <img src="./assets/img/logos-bg.png" alt="Abstract Background" loading="lazy" class="background-img">
+  </picture>
+    <div class="background-overlay"></div>
+</div>
 <!-- Header -->
 <header>
   <div class="heading" data-aos="fade-down" data-aos-duration="1000">
@@ -49,7 +51,7 @@
         <!-- Collapsible Nav Links -->
         <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mx-auto text-center">
-            <li class="nav-item"><a class="nav-link text-white" href="Homepage.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="Homepage.html#research">Home</a></li>
             <li class="nav-item"><a class="nav-link text-white" href="agriculture.html">Agriculture</a></li>
             <li class="nav-item"><a class="nav-link text-white active" href="aquaculture.html">Aquaculture</a></li>
             <li class="nav-item"><a class="nav-link text-white" href="livestock.html">Livestock</a></li>
@@ -63,49 +65,66 @@
     </div>
     </nav>
 
-    <!-- Header Video -->
-    <div class="video-header">
-        <video autoplay muted loop>
-            <source src="" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
-    </div>
-
-    <!-- Content Section -->
-    <div class="container">
-        <section class="content-section">
-            <h3>Introduction</h3>
+    <div class="container-page py-5">
+    <!-- Top Row -->
+    <div class="row g-4 mb-4">
+        <div class="col-md-5">
+        <div class="bento-card h-100">
+            <h3>Introduction
+                <hr>
+            </h3>
             <p>
-                Aquaculture is the farming of aquatic organisms, such as fish and plants in controlled environments like pods, tanks, or ocean enclosures. It involves the cultivation of both freshwater and marine species for commercial purposes, typically for food production.
+            Aquaculture is the farming of aquatic organisms, such as fish and plants in controlled environments like pods, tanks, or ocean enclosures. It involves the cultivation of both freshwater and marine species for commercial purposes, typically for food production.
             </p>
             <p>
-                The stocking ratio in aquaculture has become an important consideration due to the increasing demand for fish as food and for other purposes. As more people seek fish for consumption and various industries utilize aquatic species, the demand for aquaculture production has surged. This heightened demand has led to a rise in the price of commercial fish diets, as the cost of quality feed increases. Consequently, managing the stocking ratio effectively is crucial to ensure sustainable fish farming practices, balancing the need for optimal growth rates while minimizing feed costs and maximizing production efficiency. 
-            </P>
-        </section>
-
-        <section class="content-section">
-            <h3>Initiatives</h3>
+            The stocking ratio in aquaculture has become an important consideration due to the increasing demand for fish as food and for other purposes. As more people seek fish for consumption and various industries utilize aquatic species, the demand for aquaculture production has surged. This heightened demand has led to a rise in the price of commercial fish diets, as the cost of quality feed increases. Consequently, managing the stocking ratio effectively is crucial to ensure sustainable fish farming practices, balancing the need for optimal growth rates while minimizing feed costs and maximizing production efficiency.
+            </p>
+        </div>
+        </div>
+        <div class="col-md-7">
+        <div class="bento-card h-100">
+            <h3>Initiatives
+                <hr>
+            </h3>
             <p>
-                The stocking ratio of red tilapia and giant freshwater prawn plays a significant role in determining their growth performance and survival rates in aquaculture. Maintaining an optimal stocking density ensures that both species can grow efficiently without excessive competition for resources, leading to improved health and survival rates. In terms of nutrition, velvet bean, a leguminous plant, has shown promising results when incorporated into aquaculture diets. Its nutritional and phytochemical properties have been studied for their impact on reproductive performance in both male and female fish. Velvet bean has also been linked to influencing the sex inversion rate and enhancing the growth response of fish during the grow-out phase. Furthermore, feeding velvet beans in aquaculture systems may affect the ectoparasite composition and intensity, with potential implications for fish health. Understanding these factors is essential for optimizing stocking ratios and improving overall aquaculture production while ensuring the sustainability of farming practices.
-            </p> 
-        </section>
+            The stocking ratio of red tilapia and giant freshwater prawn plays a significant role in determining their growth performance and survival rates in aquaculture. Maintaining an optimal stocking density ensures that both species can grow efficiently without excessive competition for resources, leading to improved health and survival rates. In terms of nutrition, velvet bean, a leguminous plant, has shown promising results when incorporated into aquaculture diets. Its nutritional and 
+            phytochemical properties have been studied for their impact on reproductive performance in both male and female fish.
+            </p>
+            <p>
+            Velvet bean has also been linked to influencing the sex inversion rate and enhancing the growth response of fish during the grow-out phase. Furthermore, feeding velvet beans in aquaculture systems may affect the ectoparasite composition and intensity, with potential implications for fish health. Understanding these factors is essential for optimizing
+             stocking ratios and improving overall aquaculture production while ensuring the sustainability of farming practices.
+            </p>
+        </div>
+        </div>
+    </div>
 
-        <section class="content-section">
-            <h3>R4D Thrusts and Priorities</h3>
+    <!-- Bottom Row -->
+    <div class="row g-4">
+        <div class="col-md-7">
+        <div class="bento-card h-100">
+            <h3>R4D Thrusts and Priorities
+                <hr>
+            </h3>
             <ul>
-                <li>The Aquaculture Performance of Red Tilapia and Giant Freshwater prawn as influenced by Different Stocking Ratios</li>
+                <li>The Aquaculture Performance of Red Tilapia and Giant Freshwater prawn as influenced by Different Stocking Ratios.</li>
                 <li>Utilization of Velvet Bean as Feedstuff on the Aquaculture Performance of Red Tilapia</li>
                 <li>Develop a sustainable feed development strategy</li>
             </ul>
-        </section>
-
-        <section class="content-section">
-            <h3>Recommendations</h3>
+        </div>
+        </div>
+        <div class="col-md-5">
+        <div class="bento-card h-100">
+            <h3>Recommendations
+                <hr>
+            </h3>
             <ul>
-                <li>Aquaculture has become increasingly important for global food security and sustainable resources management. It must prioritize reducing its environmental footprint. It includes managing waste, minimizing the use of antibiotics and chemicals, and preventing habitat destruction. Also, it needs to look into alternative protein sources for fish feed as it is crucial for making aquaculture more sustainable.</li>
-                <li>While aquaculture has enormous potential to meet the growing demand for seafood and contribute to global food security it needs to evolve in ways that prioritize sustainability, technology, and community involvement.</li>
+            <li>Aquaculture has become increasingly important for global food security and sustainable resources management. It must prioritize reducing its environmental footprint. It includes managing waste, minimizing the use of antibiotics and chemicals, and preventing habitat destruction. Also, it needs to look into alternative protein sources for fish feed as it is crucial for making aquaculture more sustainable.</li>
+            <li>While aquaculture has enormous potential to meet the growing demand for seafood and contribute to global food security it needs to evolve in ways that prioritize sustainability, technology, and community involvement.</li>
+            
             </ul>
-        </section>
+        </div>
+        </div>
+    </div>
     </div>
 
     <!-- Footer -->
