--- a/biotechnology.html
+++ b/biotechnology.html
@@ -7,7 +7,7 @@
     <title>Agriculture Research</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./styles/biotechnology.css">
+    <link rel="stylesheet" href="./styles/research.css">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="./styles/media-resource-navbar.css">
     <link rel="stylesheet" href="./styles/global.css">
@@ -15,13 +15,15 @@
 </head>
 
 <body>
-    <!-- Background Video Container -->
-    <div class="background-container">
-        <video autoplay muted loop>
-            <source src="./assets/videos/Orange Abstract Background YouTube Thumbnail1.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
-    </div>
+<!-- Background Image Container -->
+<div class="background-container">
+  <picture>
+    <!-- Optional fallback for browsers that don't support WebP -->
+    <source srcset="./assets/img/logos-bg.webp" type="image/webp">
+    <img src="./assets/img/logos-bg.png" alt="Abstract Background" loading="lazy" class="background-img">
+  </picture>
+    <div class="background-overlay"></div>
+</div>
 <!-- Header -->
 <header>
   <div class="heading" data-aos="fade-down" data-aos-duration="1000">
@@ -49,7 +51,7 @@
         <!-- Collapsible Nav Links -->
         <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mx-auto text-center">
-            <li class="nav-item"><a class="nav-link text-white" href="Homepage.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="Homepage.html#research">Home</a></li>
             <li class="nav-item"><a class="nav-link text-white" href="agriculture.html">Agriculture</a></li>
             <li class="nav-item"><a class="nav-link text-white" href="aquaculture.html">Aquaculture</a></li>
             <li class="nav-item"><a class="nav-link text-white" href="livestock.html">Livestock</a></li>
@@ -63,45 +65,58 @@
     </div>
     </nav>
 
-    <!-- Header Video -->
-    <div class="video-header">
-        <video autoplay muted loop>
-            <source src="C:\Users\daryl\Desktop\WEBSITE\research\Bio-Tech.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
+    <div class="container-page py-5">
+    <!-- Top Row -->
+    <div class="row g-4 mb-4">
+        <div class="col-md-5">
+        <div class="bento-card h-100">
+            <h3>Introduction
+                <hr>
+            </h3>
+            <p>
+            Sour and Aglibut sweet tamarind are difficult to distinguish, especially when they are seedlings. At this early stage, both varieties appear quite similar, making it challenging to tell them apart. The differences between them become more apparent as they mature, with the sour tamarind exhibiting a more tangy flavor and the Aglibut sweet tamarind developing a milder, sweeter taste. However, in their seedling form, their characteristics are not yet fully developed, contributing to the confusion in identifying them.
+            </p>
+
+        </div>
+        </div>
+        <div class="col-md-7">
+        <div class="bento-card h-100">
+            <h3>Initiatives
+                <hr>
+            </h3>
+            <p>
+DNA barcoding using the matK and QR codes for Sour and Sweet Tamarind seedlings is an innovative method to distinguish between the two tamarind varieties at an early developmental stage. The matK gene, a commonly used marker in plant DNA barcoding, is selected for its ability to provide unique genetic identifiers that are consistent within species and can differentiate closely related varieties. By extracting DNA from the seedlings and sequencing the matK region, researchers can create a genetic barcode for both Sour and Sweet Tamarind. This barcode is then encoded into a QR code, which can be scanned to quickly access genetic information about the plant, facilitating efficient identification and classification. This approach not only simplifies the process of distinguishing between these two varieties but also promotes a more precise and accessible method for plant research and conservation.            </p>
+        </div>
+        </div>
     </div>
 
-    <!-- Content Section -->
-    <div class="container">
-        <section class="content-section">
-            <h3>Introduction</h3>
-            <p>
-                Sour and Aglibut sweet tamarind are difficult to distinguish, especially when they are seedlings. At this early stage, both varieties appear quite similar, making it challenging to tell them apart. The differences between them become more apparent as they mature, with the sour tamarind exhibiting a more tangy flavor and the Aglibut sweet tamarind developing a milder, sweeter taste. However, in their seedling form, their characteristics are not yet fully developed, contributing to the confusion in identifying them.</p>
-        </section>
-
-        <section class="content-section">
-            <h3>Initiatives</h3>
-            <p>
-                DNA barcoding using the matK and QR codes for Sour and Sweet Tamarind seedlings is an innovative method to distinguish between the two tamarind varieties at an early developmental stage. The matK gene, a commonly used marker in plant DNA barcoding, is selected for its ability to provide unique genetic identifiers that are consistent within species and can differentiate closely related varieties. By extracting DNA from the seedlings and sequencing the matK region, researchers can create a genetic barcode for both Sour and Sweet Tamarind. This barcode is then encoded into a QR code, which can be scanned to quickly access genetic information about the plant, facilitating efficient identification and classification. This approach not only simplifies the process of distinguishing between these two varieties but also promotes a more precise and accessible method for plant research and conservation.</p>
-        </section>
-
-        <section class="content-section">
-            <h3>R4D Thrusts and Priorities</h3>
+    <!-- Bottom Row -->
+    <div class="row g-4">
+        <div class="col-md-7">
+        <div class="bento-card h-100">
+            <h3>R4D Thrusts and Priorities
+                <hr>
+            </h3>
             <ul>
-                <li>Molecular Phylogenetics of Sour and Sweet Tamarind using matK DNA marker</li>
-                <li>Agricultural biotechnology and food security</li>
-                <li>Develop medical treatments </li>
+            <li>Molecular Phylogenetics of Sour and Sweet Tamarind using matK DNA marker</li>
+            <li>Agricultural biotechnology and food security</li>
+            <li>EDevelop medical treatments</li>
             </ul>
-        </section>
-
-        <section class="content-section">
-            <h3>Recommendations</h3>
+        </div>
+        </div>
+        <div class="col-md-5">
+        <div class="bento-card h-100">
+            <h3>Recommendations
+                <hr>
+            </h3>
             <ul>
                 <li>There are several possibilities for enhancing crop production, improving sustainability, and addressing challenges when it comes to bio-technology especially in the context of agriculture and plant breeding.</li>
                 <li>Breeding tamarind in both physical traits and genetic data will be able to identify the differences and right taste of the tamarind. Physical traits can be affected by the environment, so combining them with the DNA analysis gives a cleaner, more reliable picture of the plant’s qualities. Additionally, using additional DNA markers will enhance the discriminatory power in tamarind identification.</li>
                 <li>Overall, bio technology has the potential to transform tamarind farming and many agricultural practices by integrating advanced genetic tools, sustainable practices, and data-driven approaches. We can improve plant varieties, reduce environmental impact, and increase food security for the future.</li>
             </ul>
-        </section>
+        </div>
+        </div>
+    </div>
     </div>
 
     <!-- Footer -->
