--- a/ictv.html
+++ b/ictv.html
@@ -45,7 +45,7 @@
         <!-- Collapsible Nav Links -->
         <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mx-auto text-center">
-            <li class="nav-item"><a class="nav-link text-white" href="Homepage.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="Homepage.html#media-resources">Home</a></li>
             <li class="nav-item"><a class="nav-link text-white active" href="ictv.html">ICTV</a></li>
             <li class="nav-item"><a class="nav-link text-white" href="iec.html">IEC Materials</a></li>
             <li class="nav-item"><a class="nav-link text-white" href="newsletter.html">Newsletter</a></li>
