--- a/livelihood.html
+++ b/livelihood.html
@@ -7,7 +7,7 @@
     <title>Agriculture Research</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./styles/livelihood.css">
+    <link rel="stylesheet" href="./styles/research.css">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="./styles/media-resource-navbar.css">
     <link rel="stylesheet" href="./styles/global.css">
@@ -15,13 +15,15 @@
 </head>
 
 <body>
-    <!-- Background Video Container -->
-    <div class="background-container">
-        <video autoplay muted loop>
-            <source src="./assets/videos/Orange Abstract Background YouTube Thumbnail1.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
-    </div>
+<!-- Background Image Container -->
+<div class="background-container">
+  <picture>
+    <!-- Optional fallback for browsers that don't support WebP -->
+    <source srcset="./assets/img/logos-bg.webp" type="image/webp">
+    <img src="./assets/img/logos-bg.png" alt="Abstract Background" loading="lazy" class="background-img">
+  </picture>
+    <div class="background-overlay"></div>
+</div>
 <!-- Header -->
 <header>
   <div class="heading" data-aos="fade-down" data-aos-duration="1000">
@@ -49,7 +51,7 @@
         <!-- Collapsible Nav Links -->
         <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mx-auto text-center">
-            <li class="nav-item"><a class="nav-link text-white" href="Homepage.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="Homepage.html#research">Home</a></li>
             <li class="nav-item"><a class="nav-link text-white" href="agriculture.html">Agriculture</a></li>
             <li class="nav-item"><a class="nav-link text-white" href="aquaculture.html">Aquaculture</a></li>
             <li class="nav-item"><a class="nav-link text-white" href="livestock.html">Livestock</a></li>
@@ -63,48 +65,61 @@
     </div>
     </nav>
 
-    <!-- Header Video -->
-    <div class="video-header">
-        <video autoplay muted loop>
-            <source src="C:\Users\daryl\Desktop\WEBSITE\research\Livelihood.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
+    <div class="container-page py-5">
+    <!-- Top Row -->
+    <div class="row g-4 mb-4">
+        <div class="col-md-5">
+        <div class="bento-card h-100">
+            <h3>Introduction
+                <hr>
+            </h3>
+            <p>
+            Livelihood refers to the means or methods by which individuals or communities sustain themselves financially and support their basic needs, such as food, shelter, and clothing. It encompasses the activities, resources, and strategies people use to earn a living, whether through work, agriculture, trade, services, or other economic activities.
+            </p>
+            <p>
+           Climate change is a widespread issue that significantly impacts ecosystems and biodiversity, leading to the disruption of natural habitats and altering species' survival. Alongside this, climate-related disasters, such as floods, droughts, and storms, can devastate communities, destroying people's economic, cultural, and social lives. These events worsen existing vulnerabilities and lead to increased poverty and food insecurity. The effectiveness of initiatives like the National Greening Program (NGP) is critical in addressing these challenges. By focusing on poverty reduction, food security, and environmental stability, NGP aims to mitigate the effects of climate change and promote sustainable development. However, its success in achieving these goals depends on effective implementation and coordination across various sectors.            </p>
+        </div>
+        </div>
+        <div class="col-md-7">
+        <div class="bento-card h-100">
+            <h3>Initiatives
+                <hr>
+            </h3>
+            <p>
+            The assessment of the exposure and socio-economic effects of women agricultural entrepreneurs highlights significant challenges they face, including limited access to resources, training, and financial support, which restrict their ability to thrive in the sector. Gender disparities are especially evident in disaster management, where women often bear a disproportionate burden due to societal roles and lack of inclusion in decision-making processes. These disparities further exacerbate the vulnerability of women in agriculture during climate-related disasters. In addition, farmers have generally perceived little impact of the National Greening Program (NGP) on their overall well-being, with many reporting that it has not led to noticeable improvements in their livelihoods, food security, or environmental stability. This suggests a need for more targeted interventions and a deeper understanding of the specific challenges faced by these communities to ensure the effectiveness of such programs.            </p>
+        </div>
+        </div>
     </div>
 
-    <!-- Content Section -->
-    <div class="container">
-        <section class="content-section">
-            <h3>Introduction</h3>
-            <p>
-                Livelihood refers to the means or methods by which individuals or communities sustain themselves financially and support their basic needs, such as food, shelter, and clothing. It encompasses the activities, resources, and strategies people use to earn a living, whether through work, agriculture, trade, services, or other economic activities.</p>
-            <p>
-                Climate change is a widespread issue that significantly impacts ecosystems and biodiversity, leading to the disruption of natural habitats and altering species' survival. Alongside this, climate-related disasters, such as floods, droughts, and storms, can devastate communities, destroying people's economic, cultural, and social lives. These events worsen existing vulnerabilities and lead to increased poverty and food insecurity. The effectiveness of initiatives like the National Greening Program (NGP) is critical in addressing these challenges. By focusing on poverty reduction, food security, and environmental stability, NGP aims to mitigate the effects of climate change and promote sustainable development. However, its success in achieving these goals depends on effective implementation and coordination across various sectors.</p>
-        </section>
-
-        <section class="content-section">
-            <h3>Initiatives</h3>
-            <p>
-                The assessment of the exposure and socio-economic effects of women agricultural entrepreneurs highlights significant challenges they face, including limited access to resources, training, and financial support, which restrict their ability to thrive in the sector. Gender disparities are especially evident in disaster management, where women often bear a disproportionate burden due to societal roles and lack of inclusion in decision-making processes. These disparities further exacerbate the vulnerability of women in agriculture during climate-related disasters. In addition, farmers have generally perceived little impact of the National Greening Program (NGP) on their overall well-being, with many reporting that it has not led to noticeable improvements in their livelihoods, food security, or environmental stability. This suggests a need for more targeted interventions and a deeper understanding of the specific challenges faced by these communities to ensure the effectiveness of such programs. </p>
-        </section>
-
-        <section class="content-section">
-            <h3>R4D Thrusts and Priorities</h3>
+    <!-- Bottom Row -->
+    <div class="row g-4">
+        <div class="col-md-7">
+        <div class="bento-card h-100">
+            <h3>R4D Thrusts and Priorities
+                <hr>
+            </h3>
             <ul>
-                <li>Climate Change and Environmental Sustainability</li>
-                <li>Gender and Livelihood (Perceived Gender Roles of Households)</li>
-                <li>Economic Impact of National Greening Program (NGP) on Poverty Alleviation and Food Security in Pampanga</li>
-                <li>Household Waste Oil as a Potential Biodiesel Source</li>
-                <li>Social protection and livelihood security</li>
-            </ul>
-        </section>
+            <li>Climate Change and Environmental Sustainability</li>
+            <li>Gender and Livelihood (Perceived Gender Roles of Households)</li>
+            <li>Economic Impact of National Greening Program (NGP) on Poverty Alleviation and Food Security in Pampanga</li>
+            <li>MHousehold Waste Oil as a Potential Biodiesel Source</li>
+            <li>Social protection and livelihood security</li>
 
-        <section class="content-section">
-            <h3>Recommendations</h3>
-            <ul>
-                <li>Building climate resilient livelihoods is not just an environmental issue, but a critical pathway to ensuring the survival and well-being of vulnerable communities facing increasingly unpredictable weather patterns and ecosystem degradation.</li>
-                <li>It is important to think both practically and sustainability when it comes to livelihood. To help communities cope with the changing weather patterns and ecosystem degradation, it needs to examine climate-resilient livelihoods, such as drought-resistant crops or sustainable fisheries management. Additionally, to address gender sensitive livelihood, such as the strategies and policies that support women and other disadvantaged groups. Lastly, the role of social protection programs in improving security, especially during crises.</li>
             </ul>
-        </section>
+        </div>
+        </div>
+        <div class="col-md-5">
+        <div class="bento-card h-100">
+            <h3>Recommendations
+                <hr>
+            </h3>
+            <ul>
+            <li>Building climate resilient livelihoods is not just an environmental issue, but a critical pathway to ensuring the survival and well-being of vulnerable communities facing increasingly unpredictable weather patterns and ecosystem degradation.</li>
+            <li>It is important to think both practically and sustainability when it comes to livelihood. To help communities cope with the changing weather patterns and ecosystem degradation, it needs to examine climate-resilient livelihoods, such as drought-resistant crops or sustainable fisheries management. Additionally, to address gender sensitive livelihood, such as the strategies and policies that support women and other disadvantaged groups. Lastly, the role of social protection programs in improving security, especially during crises.</li>
+            </ul>
+        </div>
+        </div>
+    </div>
     </div>
 
     <!-- Footer -->
