--- a/livestock.html
+++ b/livestock.html
@@ -7,7 +7,7 @@
     <title>Agriculture Research</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./styles/livestock.css">
+    <link rel="stylesheet" href="./styles/research.css">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="./styles/media-resource-navbar.css">
     <link rel="stylesheet" href="./styles/global.css">
@@ -15,13 +15,15 @@
 </head>
 
 <body>
-    <!-- Background Video Container -->
-    <div class="background-container">
-        <video autoplay muted loop>
-            <source src="./assets/videos/Orange Abstract Background YouTube Thumbnail1.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
-    </div>
+<!-- Background Image Container -->
+<div class="background-container">
+  <picture>
+    <!-- Optional fallback for browsers that don't support WebP -->
+    <source srcset="./assets/img/logos-bg.webp" type="image/webp">
+    <img src="./assets/img/logos-bg.png" alt="Abstract Background" loading="lazy" class="background-img">
+  </picture>
+    <div class="background-overlay"></div>
+</div>
 <!-- Header -->
 <header>
   <div class="heading" data-aos="fade-down" data-aos-duration="1000">
@@ -49,7 +51,7 @@
         <!-- Collapsible Nav Links -->
         <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mx-auto text-center">
-            <li class="nav-item"><a class="nav-link text-white" href="Homepage.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="Homepage.html#research">Home</a></li>
             <li class="nav-item"><a class="nav-link text-white" href="agriculture.html">Agriculture</a></li>
             <li class="nav-item"><a class="nav-link text-white" href="aquaculture.html">Aquaculture</a></li>
             <li class="nav-item"><a class="nav-link text-white active" href="livestock.html">Livestock</a></li>
@@ -63,45 +65,66 @@
     </div>
     </nav>
 
-    <!-- Header Video -->
-    <div class="video-header">
-        <video autoplay muted loop>
-            <source src="C:\Users\daryl\Desktop\WEBSITE\research\livestocks.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
+    <div class="container-page py-5">
+    <!-- Top Row -->
+    <div class="row g-4 mb-4">
+        <div class="col-md-5">
+        <div class="bento-card h-100">
+            <h3>Introduction
+                <hr>
+            </h3>
+            <p>
+It is important to think both practically and sustainability when it comes to livelihood. To help communities cope with the changing weather patterns and ecosystem degradation, it needs to examine climate-resilient livelihoods, such as drought-resistant crops or sustainable fisheries management. 
+<br>
+Additionally, to address gender sensitive livelihood, such as the strategies and policies that support women and other disadvantaged groups. Lastly, the role of social protection programs in improving security, especially during crises.            </p>
+        </div>
+        </div>
+        <div class="col-md-7">
+        <div class="bento-card h-100">
+            <h3>Initiatives
+                <hr>
+            </h3>
+            <p>
+            It aimed to detect Porcine Epidemic Diarrhea Virus (PEDV) among native pigs in 
+            Pampanga using the Reverse Transcription Polymerase Chain Reaction (RT-PCR) assay, 
+            a molecular technique known for its high accuracy in viral detection. Additionally, 
+            it investigated the effects of different feed combinations on the growth performance 
+            of pigs, finding that a mix of corn and roasted soybean, as well as corn and fermented 
+            soybean, resulted in better average daily gain and improved feed efficiency.
+            </p>
+            <p>
+            Another aspect of the study focused on the gastrointestinal and respiratory 
+            conditions of BT-black native pigs, comparing those fed fermented versus unfermented soybean. 
+            The potential of soybean as an estrus enhancer was also explored, examining its impact on reproductive health in pigs. These findings contribute valuable insights into improving swine health and production efficiency.            </p>
+        </div>
+        </div>
     </div>
 
-    <!-- Content Section -->
-    <div class="container">
-        <section class="content-section">
-            <h3>Introduction</h3>
-            <p>
-                It is important to think both practically and sustainability when it comes to livelihood. To help communities cope with the changing weather patterns and ecosystem degradation, it needs to examine climate-resilient livelihoods, such as drought-resistant crops or sustainable fisheries management. Additionally, to address gender sensitive livelihood, such as the strategies and policies that support women and other disadvantaged groups. Lastly, the role of social protection programs in improving security, especially during crises. </p>
-        </section>
-
-        <section class="content-section">
-            <h3>Initiatives</h3>
-            <p> 
-                It aimed to detect Porcine Epidemic Diarrhea Virus (PEDV) among native pigs in Pampanga using the Reverse Transcription Polymerase Chain Reaction (RT-PCR) assay, a molecular technique known for its high accuracy in viral detection. Additionally, it investigated the effects of different feed combinations on the growth performance of pigs, finding that a mix of corn and roasted soybean, as well as corn and fermented soybean, resulted in better average daily gain and improved feed efficiency. Another aspect of the study focused on the gastrointestinal and respiratory conditions of BT-black native pigs, comparing those fed fermented versus unfermented soybean. The potential of soybean as an estrus enhancer was also explored, examining its impact on reproductive health in pigs. These findings contribute valuable insights into improving swine health and production efficiency.
-            </p>                
-        
-        </section>
-
-        <section class="content-section">
-            <h3>R4D Thrusts and Priorities</h3>
+    <!-- Bottom Row -->
+    <div class="row g-4">
+        <div class="col-md-7">
+        <div class="bento-card h-100">
+            <h3>R4D Thrusts and Priorities
+                <hr>
+            </h3>
             <ul>
-                <li>Native pigs production </li>
-                <li>Animal health and disease control</li>
-                <li>Sustainable livestock production</li>
+            <li>Native pigs production</li>
+            <li>Animal health and disease control</li>
+            <li>Sustainable livestock production</li>
             </ul>
-        </section>
-
-        <section class="content-section">
-            <h3>Recommendations</h3>
+        </div>
+        </div>
+        <div class="col-md-5">
+        <div class="bento-card h-100">
+            <h3>Recommendations
+                <hr>
+            </h3>
             <ul>
-                <li>Developing more effective vitamins or vaccines that would help to improve the health and reduce the need for antibiotics and a disease monitoring system in livestock in order to detect and control outbreaks of diseases that will improve the diagnostics and tracking technologies and those with diseases that can be seen immediately. Additionally, Livestock production can also improve feed efficiency and explore alternative feed ingredients.</li>
+            <li>Developing more effective vitamins or vaccines that would help to improve the health and reduce the need for antibiotics and a disease monitoring system in livestock in order to detect and control outbreaks of diseases that will improve the diagnostics and tracking technologies and those with diseases that can be seen immediately. Additionally, Livestock production can also improve feed efficiency and explore alternative feed ingredients.</li>
             </ul>
-        </section>
+        </div>
+        </div>
+    </div>
     </div>
 
     <!-- Footer -->
