--- a/modules.html
+++ b/modules.html
@@ -49,7 +49,7 @@
         </button>
         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
         <ul class="navbar-nav text-center">
-            <li class="nav-item"><a class="nav-link text-white" href="Homepage.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="Homepage.html#media-resources">Home</a></li>
             <li class="nav-item"><a class="nav-link text-white" href="ictv.html">ICTV</a></li>
             <li class="nav-item"><a class="nav-link text-white" href="iec.html">IEC Materials</a></li>
             <li class="nav-item"><a class="nav-link text-white" href="newsletter.html">Newsletter</a></li>
