--- a/biotechnology.html
+++ b/biotechnology.html
@@ -42,6 +42,9 @@
 </header>
     <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container-fluid">
+    <div class="navbar-logo d-lg-none">
+      <h3 class="logo-text">Biotechnology</h3>        
+    </div>
         <!-- Navbar Toggler (right-aligned) -->
         <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
