--- a/tech.html
+++ b/tech.html
@@ -48,6 +48,11 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark " data-aos="fade-down" data-aos-duration="1000"style="position: sticky; top: 0; z-index: 999;">
   <div class="container-fluid justify-content-center">
+        <!-- LOGO -->
+    <div class="navbar-logo d-lg-none">
+      <!-- <img src="./assets/img/kmlogo.png" alt="Logo" class="mobile-logo"> -->
+    <h3 class="logo-text text-white">Knowledge Management Unit</h3>
+    </div>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -73,7 +78,7 @@
             <li class="nav-item"><a class="nav-link text-white" href="Homepage.html#research">Research</a></li>
             <li class="nav-item"><a class="nav-link text-white" href="Homepage.html#sdgs">SDGs</a></li>
             <li class="nav-item"><a class="nav-link text-white" href="Homepage.html#about">About</a></li>
-            <li class="nav-item"><a class="nav-link text-white active" href="Homepage.html#about">Contact</a></li>
+            <li class="nav-item"><a class="nav-link text-white active" href="contact.html">Contact</a></li>
       </ul>
     </div>
   </div>
@@ -151,6 +156,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
     <script src="./message.js"></script>
+     <script src="./assets/js/navbar.js"></script>
     <script>
         AOS.init();
     </script>
