fixed bugs and the research_section css ui and ux

--- a/iec.html
+++ b/iec.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./styles/iec.css">
+  <link rel="stylesheet" href="./styles/research.css">
   <link rel="stylesheet" href="./styles/media-resource-navbar.css">
   <link rel="stylesheet" href="./styles/global.css">
 
@@ -32,7 +33,10 @@
 </header>             
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark">
-      <div class="container-fluid justify-content-center"> <!-- center content -->
+      <div class="container-fluid"> <!-- center content -->
+            <div class="navbar-logo d-lg-none">
+      <h3 class="logo-text">IEC Materials</h3>        
+    </div>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -61,7 +65,7 @@
     <div class="background-overlay"></div>
 </div>
 
-    <div class="container-page">
+    <div class="container-page mb-5">
       <div class="row g-4 mt-4">
 
       <!-- Brochure Card -->
@@ -116,7 +120,7 @@
           </div>
         </a>
       </div>
-      
+    </div>  
     </div>
     
   </section>
