--- a/modules.html
+++ b/modules.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="./styles/modules.css">
+      <link rel="stylesheet" href="./styles/research.css">
     <link rel="stylesheet" href="./styles/media-resource-navbar.css">
     <link rel="stylesheet" href="./styles/global.css">
 
@@ -25,7 +26,7 @@
     <img src="./assets/img/logos-bg.png" alt="Abstract Background" loading="lazy" class="background-img">
   </picture>
     <div class="background-overlay"></div>
-</div> 
+</div>
 <!-- Header -->
 <header>
   <div class="heading" data-aos="fade-down" data-aos-duration="1000">
@@ -44,7 +45,10 @@
 </header>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark">
-    <div class="container-fluid justify-content-center"> <!-- center content -->
+    <div class="container-fluid">
+          <div class="navbar-logo d-lg-none">
+      <h3 class="logo-text">Modules</h3>        
+    </div> <!-- center content -->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
