--- a/tech portfolio.html
+++ b/tech portfolio.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="./styles/tech-portfolio.css">
+  <link rel="stylesheet" href="./styles/research.css">
   <link rel="stylesheet" href="./styles/media-resource-navbar.css">
   <link rel="stylesheet" href="./styles/global.css">
 </head>
@@ -42,7 +43,10 @@
 
 <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark">
-    <div class="container-fluid justify-content-center"> <!-- center content -->
+    <div class="container-fluid"> <!-- center content -->
+          <div class="navbar-logo d-lg-none">
+      <h3 class="logo-text">Technology Profile</h3>        
+    </div>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
