--- a/ictv.html
+++ b/ictv.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/ictv.css">
+    <link rel="stylesheet" href="./styles/research.css">
     <link rel="stylesheet" href="./styles/media-resource-navbar.css">
     <link rel="stylesheet" href="./styles/global.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -36,6 +37,9 @@
 </header>
     <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container-fluid">
+            <div class="navbar-logo d-lg-none">
+      <h3 class="logo-text">ICTV</h3>        
+    </div>
         <!-- Navbar Toggler (right-aligned) -->
         <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -55,7 +59,6 @@
         </div>
     </div>
     </nav>
-
 
 <!-- Background Image Container -->
 <div class="background-container">
