--- a/tech.html
+++ b/tech.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;600;700&display=swap" rel="stylesheet">
     
-    <link rel="stylesheet" href="./styles/tech.css">
+    <!-- <link rel="stylesheet" href="./styles/tech.css"> -->
     <link rel="stylesheet" href="./styles/global.css">
     <link rel="stylesheet" href="./styles/homepage.css">
     <link rel="stylesheet" href="./styles/navbar.css">
@@ -19,9 +19,102 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
 </head>
+<style>
 
+/* === CARD CONTAINER === */
+.container .row {
+  margin: 0 !important;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+/* === CARD COLUMN === */
+.container .col-md-3 {
+  padding: 0 !important;
+  display: flex;
+}
+
+/* === CARD === */
+.new_research-card {
+  background-color: transparent;
+  border: none;
+  border-radius: 0;
+  transition: background-color 0.3s ease;
+  display: flex;
+  height: 100%;
+}
+
+/* === INNER FLEX WRAPPER === */
+.new_research-card .d-flex {
+  padding: 10px;
+  gap: 5px;
+  height: 100%;
+  width: 100%;
+}
+
+/* === HOVER === */
+.new_research-card:hover {
+  background-color: #f85e0a;
+}
+
+.new_research-card:hover .card-title,
+.new_research-card:hover .card-text,
+.new_research-card:hover .read-more {
+  color: white !important;
+}
+
+.new_research-card:hover .icon-img-research {
+  filter: brightness(0) invert(1);
+}
+
+
+/* === IMAGE ICON === */
+.icon-img-research {
+  width: 70px;
+  height: auto;
+  object-fit: contain;
+  transition: filter 0.3s ease;
+}
+
+/* === TEXT === */
+.card-body {
+  padding: 0;
+  flex-grow: 1;
+  text-align: start;
+}
+
+.card-title,
+.card-text,
+.read-more {
+  margin: 0;
+  color: var(--primary-color);
+}
+
+/* === LINK === */
+a.text-decoration-none {
+  display: block;
+  height: 100%;
+}
+
+/* === RESPONSIVE === */
+@media (max-width: 991px) {
+  .new_research-card .d-flex {
+    flex-direction: column !important;
+    text-align: center;
+  }
+
+  .card-body {
+    text-align: center;
+  }
+
+  .icon-img-research {
+    margin: 0 
+  }
+}
+
+</style>
 <body>
-  
+
 <!-- Header -->
 <header>
   <div class="heading" data-aos="fade-down" data-aos-duration="1000">
@@ -84,18 +177,140 @@
   </div>
 </nav>
 
-  <!-- Cards -->
-  <div class="cards-container">
-    <div class="card">
-      <img src="./assets/img/11.png" alt="Tech 1" onclick="openModal(this)">
+<!-- Research Section -->
+<section id="research" class="py-5">
+<!-- Title with Gray icon and Centered -->
+    <h2 class="text-center section-title mb-4" data-aos="fade-up">
+        Research
+    <hr class="hr">
+    </h2>
+
+    <div class="container">
+        <div class="row g-0">
+<div class="col-md-3 p-2 d-flex">
+  <a href="agriculture.html" class="text-decoration-none w-100 h-100">
+    <div class="card new_research-card h-100">
+      <div class="d-flex flex-column flex-md-row align-items-center h-100">
+        <img src="./assets/img/research_thumbnails/reseach-icon-agri.png" alt="Agriculture" loading="lazy" class="icon-img-research" />
+        <div class="card-body">
+          <h5 class="card-title">Agriculture</h5>
+          <p class="card-text">Study on sustainable <br>agricultural<br> practices.</p>
+          <span class="read-more">Read more →</span>
+        </div>
+      </div>
     </div>
-    <div class="card">
-      <img src="22.png" alt="Tech 2" onclick="openModal(this)">
+  </a>
+</div>
+
+<div class="col-md-3 p-2 d-flex">
+  <a href="aquaculture.html" class="text-decoration-none w-100 h-100">
+    <div class="card new_research-card h-100">
+      <div class="d-flex flex-column flex-md-row align-items-center h-100">
+        <img src="./assets/img/research_thumbnails/reseach-icon-aqua.png" alt="Aquaculture" loading="lazy" class="icon-img-research" />
+        <div class="card-body">
+          <h5 class="card-title">Aquaculture</h5>
+          <p class="card-text">Research on aquaculture <br>development and<br> sustainability.</p>
+          <span class="read-more">Read more →</span>
+        </div>
+      </div>
     </div>
-    <div class="card">
-      <img src="33.png" alt="Tech 3" onclick="openModal(this)">
+  </a>
+</div>
+
+<div class="col-md-3 p-2 d-flex">
+  <a href="livestock.html" class="text-decoration-none w-100 h-100">
+    <div class="card new_research-card h-100">
+      <div class="d-flex flex-column flex-md-row align-items-center h-100">
+        <img src="./assets/img/research_thumbnails/reseach-icon-livestock.png" alt="Livestock" loading="lazy" class="icon-img-research" />
+        <div class="card-body">
+          <h5 class="card-title">Livestock</h5>
+          <p class="card-text">Innovative practices<br> for livestock<br> farming.</p>
+          <span class="read-more">Read more →</span>
+        </div>
+      </div>
     </div>
-  </div>
+  </a>
+</div>
+
+<div class="col-md-3 p-2 d-flex">
+  <a href="livelihood.html" class="text-decoration-none w-100 h-100">
+    <div class="card new_research-card h-100">
+      <div class="d-flex flex-column flex-md-row align-items-center h-100">
+        <img src="./assets/img/research_thumbnails/reseach-icon-livelihood.png" alt="Livelihood" loading="lazy" class="icon-img-research" />
+        <div class="card-body">
+          <h5 class="card-title">Livelihood</h5>
+          <p class="card-text">Projects aimed at<br> improving rural<br> livelihoods.</p>
+          <span class="read-more">Read more →</span>
+        </div>
+      </div>
+    </div>
+  </a>
+</div>
+
+<div class="col-md-3 p-2 d-flex">
+  <a href="biotechnology.html" class="text-decoration-none w-100 h-100">
+    <div class="card new_research-card h-100">
+      <div class="d-flex flex-column flex-md-row align-items-center h-100">
+        <img src="./assets/img/research_thumbnails/reseach-icon-biotechnology.png" alt="Biotechnology" loading="lazy" class="icon-img-research" />
+        <div class="card-body">
+          <h5 class="card-title">Biotechnology</h5>
+          <p class="card-text">Advancements in genetic<br> engineering and<br> medicine.</p>
+          <span class="read-more">Read more →</span>
+        </div>
+      </div>
+    </div>
+  </a>
+</div>
+
+<div class="col-md-3 p-2 d-flex">
+  <a href="root-crops.html" class="text-decoration-none w-100 h-100">
+    <div class="card new_research-card h-100">
+      <div class="d-flex flex-column flex-md-row align-items-center h-100">
+        <img src="./assets/img/research_thumbnails/reseach-icon-rootcrops.png" alt="Root Crops" loading="lazy" class="icon-img-research" />
+        <div class="card-body">
+          <h5 class="card-title">Root Crops</h5>
+          <p class="card-text">Exploration of root<br> crops for food<br> security.</p>
+          <span class="read-more">Read more →</span>
+        </div>
+      </div>
+    </div>
+  </a>
+</div>
+
+<div class="col-md-3 p-2 d-flex">
+  <a href="iot.html" class="text-decoration-none w-100 h-100">
+    <div class="card new_research-card h-100">
+      <div class="d-flex flex-column flex-md-row align-items-center h-100">
+        <img src="./assets/img/research_thumbnails/reseach-icon-iot.png" alt="Internet of Things" loading="lazy" class="icon-img-research" />
+        <div class="card-body">
+          <h5 class="card-title">Internet of Things</h5>
+          <p class="card-text">Using IoT for precision<br> agriculture and<br> research.</p>
+          <span class="read-more">Read more →</span>
+        </div>
+      </div>
+    </div>
+  </a>
+</div>
+
+<div class="col-md-3 p-2 d-flex">
+  <a href="others.html" class="text-decoration-none w-100 h-100">
+    <div class="card new_research-card h-100">
+      <div class="d-flex flex-column flex-md-row align-items-center h-100">
+        <img src="./assets/img/research_thumbnails/reseach-icon-others.png" alt="Others" loading="lazy" class="icon-img-research" />
+        <div class="card-body">
+          <h5 class="card-title">Others</h5>
+          <p class="card-text">Exploring emerging<br> research topics and <br> innovations.</p>
+          <span class="read-more">Read more →</span>
+        </div>
+      </div>
+    </div>
+  </a>
+</div>
+
+
+        </div>
+      </div>
+    </section>
 
   <!-- Footer -->
 <footer class="footer-section ">
